Fix team image distortion at certain screen widths.

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -675,8 +675,6 @@ section h3.section-subheading {
 
 .team-member img {
     margin: 0 auto;
-    width: 200px;
-    height: 200px;
     border: 7px solid #fff;
     box-shadow: 0 0 0 1px hsl(0, 0%, 70%);
 }
